# win9x-sync-rs

./: Cargo.toml  README.md
src/: critical_section.rs  lib.rs  once.rs
