[package]
name = "win9x-sync"
version = "0.1.1"
edition = "2021"
description = "Windows 9x compatible synchronisation primitives for Rust"
license = "MIT"
repository = "https://github.com/haileys/win9x-sync-rs"

[dependencies]
vc6-sys = "0.1"

# For more information on these dependencies see rust-lang/rust"s
# `src/tools/rustc-std-workspace` folder
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { version = "0.1.0", optional = true }

[features]
rustc-dep-of-std = ["core", "compiler_builtins/rustc-dep-of-std", "vc6-sys/rustc-dep-of-std"]
